# headway

./: Dockerfile  alembic.ini  config.yml  docker-compose.yml  example.env  main.py  pyproject.toml
headway/application/: dto.py  services.py  value_objects.py
headway/domain/: entitites.py  interfaces.py
headway/infrastructure/: inmemory.py
headway/presentation/: cli.py  tg.py
headway/presentation/cli/: cli.py
headway/presentation/telegram/: app.py  callbacks.py  states.py
headway/presentation/telegram/dialogs/: utils.py
headway/presentation/telegram/dialogs/create_reminder/: actions.py  dialogs.py
headway/presentation/telegram/dialogs/manage_reminder/: actions.py  getters.py
headway/presentation/telegram/handlers/: __init__.py  create_reminder.py  menu.py
src/headway/application/: dto.py  factory.py  intefaces.py  services.py
src/headway/domain/: entitites.py  interfaces.py  value_objects.py
src/headway/infrastructure/: config.py  di.py  motivation.py  scheduler.py  send_reminder.py
src/headway/infrastructure/adapters/: telegram.py
src/headway/infrastructure/database/: inmemory.py
src/headway/infrastructure/database/sql/: config.py  di.py  factory.py  models.py  repositories.py
src/headway/infrastructure/gateways/: send_reminder.py
src/headway/infrastructure/scheduler/: __init__.py
src/headway/presentation/cli/: cli.py
src/headway/presentation/telegram/: app.py  states.py
src/headway/presentation/telegram/dialogs/: __init__.py  start_menu.py
src/headway/presentation/telegram/handlers/: __init__.py  commands.py  menu.py
(+9 files in other folders)
