[project]
name = "headway"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "adaptix>=3.0.0b11",
    "aiogram>=3.22.0",
    "aiogram-dialog>=2.4.0",
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "dishka>=1.7.1",
    "environs>=14.3.0",
    "python-dateutil>=2.9.0.post0",
    "sqlalchemy>=2.0.43",
]


[dependency-groups]
dev = [
    "ruff",
]

[tool.ruff]
line-length = 120

[ruff.lint]
select = [
    "E",    # pycodestyle (базовый стиль)
    "F",    # pyflakes (ошибки)
    "B",    # flake8-bugbear (опасные конструкции)
    "I",    # isort (сортировка импортов)
    "UP",   # pyupgrade (современный синтаксис)
    "ANN",  # flake8-annotations (type hints)
    "N",    # pep8-naming (именование)
    "S",    # bandit (security)
    "A",    # flake8-builtins (не переопределять встроенные имена)
    "C4",   # flake8-comprehensions (эффективные списковые выражения)
    "T20",  # flake8-print (запрет print в проде)
]
